kubernetes/kiali/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - default-gateway
  http:
    - name: "kiali-routes"
      match:
        - uri:
            prefix: "/kiali"
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
...
